--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ section {
 .section-1 .section-1-div p {
   font-size: 25px;
 }
-.section-1 .section-1-div button {
+.section-1 .section-1-div a {
   max-width: 500px;
   background-color: green;
   border: none;
@@ -83,8 +83,10 @@ section {
   display: flex;
   align-items: center;
   column-gap: 10px;
+  text-decoration: none;
+  text-align: center;
 }
-.section-1 .section-1-div button:hover {
+.section-1 .section-1-div a:hover {
   opacity: 0.9;
   transform: scale(1.1);
 }
@@ -134,7 +136,7 @@ section {
   opacity: 0.9;
   transform: scale(1.1);
 }
-.section-2 button {
+.section-2 a {
   background-color: green;
   border: none;
   padding: 20px;
@@ -142,11 +144,13 @@ section {
   min-width: 300px;
   cursor: pointer;
   font-size: 25px;
+  text-align: center;
+  text-decoration: none;
   transition: 0.5s;
   color: #fff;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
-.section-2 button:hover {
+.section-2 a:hover {
   opacity: 0.9;
   transform: scale(1.1);
 }
@@ -209,15 +213,12 @@ section {
 .section-5 {
   justify-content: center;
   align-items: center;
-  /* background-image: url("bg-section-2.png"); */
-  /* background-attachment: fixed; */
-  /* background-repeat: no-repeat; */
-  /* background-size: cover; */
   background-color: #fff;
 }
 .section-5 h1 {
   font-size: 45px;
   color: green;
+  text-align: center;
 }
 .section-5 .section-5-imgs {
   display: flex;
@@ -265,10 +266,6 @@ footer {
 }
 .footer-1 div a i {
   color: #a7cf4b;
-}
-.footer-3 p {
-  text-align: center;
-  line-height: 23px;
 }
 
 @media (max-width: 1000px) {
